--- a/Automatique/PLC_Language/PLC_Prog.html
+++ b/Automatique/PLC_Language/PLC_Prog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>PLC_Language</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 
   <script>
   // Load navbar dynamically from external file
-  fetch("/navbar.html")
+  fetch("navbar_plc_language.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -89,9 +89,9 @@
       <h3>PLC - Language de Programmation</h3>
       <ul>
         <ul>
-        <li><a href="/Automatique/PLC_Language/PLC_ST.html">Structured Texte</a></li>
-        <li><a href="/Automatique/PLC_Language/PLC_Ladder.html">Ladder</a></li>
-        <li><a href="/Automatique/PLC_Language/PLC_SFC.html">Graphcet (ou SFC)</a></li>
+        <li><a href="PLC_ST.html">Structured Texte</a></li>
+        <li><a href="PLC_Ladder.html">Ladder</a></li>
+        <li><a href="PLC_SFC.html">Graphcet (ou SFC)</a></li>
       </ul>
       </ul>
     </aside> 
@@ -157,4 +157,5 @@
   </footer>
 
 </body>
+
 </html>
