--- a/Automatique/PLC_Language/PLC_ST.html
+++ b/Automatique/PLC_Language/PLC_ST.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Structured Text</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 
   <script>
   // Load navbar dynamically from external file
-  fetch("/navbar.html")
+  fetch("navbar_plc_language.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -88,9 +88,9 @@
     <aside class="sidebar">
       <h3>PLC - Language de Programmation</h3>
       <ul>
-        <li><a href="/Automatique/PLC_Language/PLC_ST.html" class="active">Structured Text (ST)</a></li>
-        <li><a href="/Automatique/PLC_Language/PLC_Ladder.html">Ladder (LD)</a></li>
-        <li><a href="/Automatique/PLC_Language/PLC_SFC.html">Graphcet (SFC)</a></li>
+        <li><a href="PLC_ST.html" class="active">Structured Text (ST)</a></li>
+        <li><a href="PLC_Ladder.html">Ladder (LD)</a></li>
+        <li><a href="PLC_SFC.html">Graphcet (SFC)</a></li>
       </ul>
     </aside> 
 
@@ -352,4 +352,5 @@
   </footer>
 
 </body>
+
 </html>
