--- a/navbar.html
+++ b/navbar.html
@@ -17,14 +17,16 @@
       </ul>
     </li>
     <li>
-      <a href="Vision/Vision_ordinateur.htlm">Vision par Ordinateur </a>
+      <a href="Vision/Vision_ordinateur.html">Vision par Ordinateur </a>
     </li>
     <li>
       <a href="#">Automatisme et Automatique ▼</a>
       <ul>
-        <li><a href="Automatique_lineaire.html">Automatique linéaire</a></li>
-        <li><a href="Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
-        <li><a href="PLC.html">PLC</a></li>
+        <li><a href=Automatique/Automatique_lineaire.html">Automatique linéaire</a></li>
+        <li><a href="Automatique/Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
+        <li><a href="Automatique/PLC_COM.html">PLC : Protocole de COM </a></li>
+        <li><a href="Automatique/PLC_Composant.html">PLC : Composant</a></li>
+        <li><a href="Automatique/PLC_Language.html">PLC : Language de Programmation </a></li>
       </ul>
     </li>
     <li>
@@ -54,6 +56,7 @@
     }
   });
 </script>
+
 
 
 
