--- a/Projet/navbar_projet.html
+++ b/Projet/navbar_projet.html
@@ -22,9 +22,11 @@
     <li>
       <a href="#">Automatisme et Automatique ▼</a>
       <ul>
-        <li><a href="Automatique_lineaire.html">Automatique linéaire</a></li>
-        <li><a href="Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
-        <li><a href="PLC.html">PLC</a></li>
+        <li><a href=../Automatique/Automatique_lineaire.html">Automatique linéaire</a></li>
+        <li><a href="../Automatique/Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
+        <li><a href="../Automatique/PLC_COM.html">PLC : Protocole de COM </a></li>
+        <li><a href="../Automatique/PLC_Composant.html">PLC : Composant</a></li>
+        <li><a href="../Automatique/PLC_Language.html">PLC : Language de Programmation </a></li>
       </ul>
     </li>
     <li>
@@ -54,6 +56,7 @@
     }
   });
 </script>
+
 
 
 
