--- a/Vision/navbar_vision.html
+++ b/Vision/navbar_vision.html
@@ -11,20 +11,22 @@
     <li>
       <a href="#">Projets Hardware ▼</a>
       <ul>
-        <li><a href="Delta.html">Robot Delta</a></li>
-        <li><a href="Gravity_Cancel.html">Robot Anti Gravité</a></li>
-        <li><a href="Balance.html">Robot Self Balancing</a></li>
+        <li><a href="../Delta.html">Robot Delta</a></li>
+        <li><a href="../Gravity_Cancel.html">Robot Anti Gravité</a></li>
+        <li><a href="../Balance.html">Robot Self Balancing</a></li>
       </ul>
     </li>
      <li>
-      <a href="../Vision/Vision_ordinateur.htlm" class="active">Vision par Ordinateur </a>
+      <a href="Vision_ordinateur.html" class="active">Vision par Ordinateur </a>
     </li>
     <li>
       <a href="#">Automatisme et Automatique ▼</a>
       <ul>
-        <li><a href="Automatique_lineaire.html">Automatique linéaire</a></li>
-        <li><a href="Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
-        <li><a href="PLC.html">PLC</a></li>
+        <li><a href=../Automatique/Automatique_lineaire.html">Automatique linéaire</a></li>
+        <li><a href="../Automatique/Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
+        <li><a href="../Automatique/PLC_COM.html">PLC : Protocole de COM </a></li>
+        <li><a href="../Automatique/PLC_Composant.html">PLC : Composant</a></li>
+        <li><a href="../Automatique/PLC_Language.html">PLC : Language de Programmation </a></li>
       </ul>
     </li>
     <li>
