Update and rename navbar_plc_com to navbar_plc_com.html

--- a/Automatique/PLC_Com/navbar_plc_com.html
+++ b/Automatique/PLC_Com/navbar_plc_com.html
@@ -1,37 +1,39 @@
 <nav>
   <ul>
-    <li><a href="index.html" class="active">Accueil</a></li>
+    <li><a href="../../index.html">Accueil</a></li>
     <li>
       <a href="#">Modélisation Systèmes et Robotique ▼</a>
       <ul>
-        <li><a href="Modelisation/Robotique_theorique/Robotique_theorique.html">Robotique Théorique</a></li>
-        <li><a href="Modelisation/Commande_optimale.html">Commande Optimale</a></li>
+        <li><a href="../../Modelisation/Robotique_theorique/Robotique_theorique.html">Robotique Théorique</a></li>
+        <li><a href="../../Modelisation/Commande_optimale.html">Commande Optimale</a></li>
       </ul>
     </li>
     <li>
       <a href="#" >Projets Hardware ▼</a>
       <ul>
-        <li><a href="Projet/Delta.html">Robot Delta</a></li>
-        <li><a href="Projet/Gravity_Cancel.html">Robot Anti Gravité</a></li>
-        <li><a href="Projet/Balance.html">Robot Self Balancing</a></li>
+        <li><a href="../../Projet/Delta.html">Robot Delta</a></li>
+        <li><a href="../../Projet/Gravity_Cancel.html">Robot Anti Gravité</a></li>
+        <li><a href="../../Projet/Balance.html">Robot Self Balancing</a></li>
       </ul>
     </li>
     <li>
-      <a href="Vision/Vision_ordinateur.htlm">Vision par Ordinateur </a>
+      <a href="../../Vision/Vision_ordinateur.htlm">Vision par Ordinateur </a>
     </li>
     <li>
-      <a href="#">Automatisme et Automatique ▼</a>
+      <a href="#" class="active">Automatisme et Automatique ▼</a>
       <ul>
-        <li><a href="Automatique_lineaire.html">Automatique linéaire</a></li>
-        <li><a href="Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
-        <li><a href="PLC.html">PLC</a></li>
+        <li><a href="../Automatique_lineaire.html">Automatique linéaire</a></li>
+        <li><a href="../Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
+        <li><a href="PLC_COM.html">PLC : Protocole de COM </a></li>
+        <li><a href="../PLC_Composant.html">PLC : Composant</a></li>
+        <li><a href="../PLC_Language.html">PLC : Language de Programmation </a></li>
       </ul>
     </li>
     <li>
       <a href="#">Autres (Hardware et Technique) ▼</a>
       <ul>
-        <li><a href="Motorisation.html">Motorisation</a></li>
-        <li><a href="Articulation.html">Articulation</a></li>
+        <li><a href="../../Motorisation.html">Motorisation</a></li>
+        <li><a href="../../Articulation.html">Articulation</a></li>
       </ul>
     </li>
     <li><a href="A_propos.html">À propos</a></li>
