Update and rename navbar_plc_language to navbar_plc_language.html

--- a/Automatique/PLC_Language/navbar_plc_language.html
+++ b/Automatique/PLC_Language/navbar_plc_language.html
@@ -1,11 +1,11 @@
 <nav>
   <ul>
-    <li><a href="../../index.html" >Accueil</a></li>
+    <li><a href="../../index.html">Accueil</a></li>
     <li>
-      <a href="#" class="active" >Modélisation Systèmes et Robotique ▼</a>
+      <a href="#">Modélisation Systèmes et Robotique ▼</a>
       <ul>
-        <li><a href="Robotique_theorique.html">Robotique Théorique</a></li>
-        <li><a href="Commande_optimale.html">Commande Optimale</a></li>
+        <li><a href="../../Modelisation/Robotique_theorique/Robotique_theorique.html">Robotique Théorique</a></li>
+        <li><a href="../../Modelisation/Commande_optimale.html">Commande Optimale</a></li>
       </ul>
     </li>
     <li>
@@ -17,24 +17,26 @@
       </ul>
     </li>
     <li>
-      <a href="../../Vision/Vision_ordinateur.html">Vision par Ordinateur </a>
+      <a href="../../Vision/Vision_ordinateur.htlm">Vision par Ordinateur </a>
     </li>
     <li>
-      <a href="#">Automatisme et Automatique ▼</a>
+      <a href="#" class="active">Automatisme et Automatique ▼</a>
       <ul>
-        <li><a href="Automatique_lineaire.html">Automatique linéaire</a></li>
-        <li><a href="Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
-        <li><a href="PLC.html">PLC</a></li>
+        <li><a href="../Automatique_lineaire.html">Automatique linéaire</a></li>
+        <li><a href="../Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
+        <li><a href="../PLC_COM.html">PLC : Protocole de COM </a></li>
+        <li><a href="../PLC_Composant.html">PLC : Composant</a></li>
+        <li><a href="PLC_Language.html">PLC : Language de Programmation </a></li>
       </ul>
     </li>
     <li>
       <a href="#">Autres (Hardware et Technique) ▼</a>
       <ul>
-        <li><a href="Motorisation.html">Motorisation</a></li>
-        <li><a href="Articulation.html">Articulation</a></li>
+        <li><a href="../../Motorisation.html">Motorisation</a></li>
+        <li><a href="../../Articulation.html">Articulation</a></li>
       </ul>
     </li>
-    <li><a href="../../A_propos.html">À propos</a></li>
+    <li><a href="A_propos.html">À propos</a></li>
     <!-- Night mode toggle button inside navbar -->
      <li class="night-mode-btn">
       <button id="themeToggle">🌙 Night Mode</button>
@@ -54,4 +56,9 @@
     }
   });
 </script>
+
+
+
+
+
 
