--- a/Vision/Vision_ordinateur.html
+++ b/Vision/Vision_ordinateur.html
@@ -144,7 +144,7 @@
 
       <p>
         Dans les prochaines pages, je vais présenter certains des principaux algorithmes de la vision par ordinateur, 
-        en me concentrant uniquement sur leur mise en œuvre avec la bibliothèque <a href="https://docs.opencv.org/3.4/index.htm"><b>OpenCV</b></a>. L’objectif est de donner une vue 
+        en me concentrant uniquement sur leur mise en œuvre avec la bibliothèque <a href="https://docs.opencv.org/3.4/index.html"><b>OpenCV</b></a>. L’objectif est de donner une vue 
         d’ensemble claire et accessible des méthodes couramment utilisées pour le traitement et l’analyse d’images, 
         à travers des exemples simples et concrets.
       </p>
@@ -159,5 +159,6 @@
 
 </body>
 </html>
+
 
 
