--- a/Vision/Convex_hull.html
+++ b/Vision/Convex_hull.html
@@ -92,13 +92,14 @@
         <li><a href="Transformation_Morpho.html">Transformation Morphologique</a></li>
         <li><a href="Pattern_Reconnaissance.html">Reconnaissance de motifs </a></li>
         <li><a href="Derive.html">Dérivé</a></li>
+        <li><a href="Contours.html">Extraction des contours</a></li>
         <li><a href="Hough.html">Transformé de Hough </a></li>
         <li><a href="Extract_line.html">Extraction de lignes</a></li>
-        <li><a href="Convex_hull.html">Enveloppe convexe</a></li>
+        <li><a href="Convex_hull.html" class="ative">Enveloppe convexe</a></li>
         <li><a href="polygone.html">Distance aux contours & Moments</a></li>
         <li><a href="remappinge.html">Remapping</a></li>
         <li><a href="affine_dft.html" >Transformation affine & DFT</a></li>
-        <li><a href="Watershed.html" class="active">Algorithme Watershed</a></li>
+        <li><a href="Watershed.html">Algorithme Watershed</a></li>
 
       </ul>
       </ul>
@@ -216,3 +217,4 @@ plt.show()
 </body>
 
 </html>
+
