--- a/Vision/Contours.html
+++ b/Vision/Contours.html
@@ -97,7 +97,7 @@
         <li><a href="Extract_line.html">Extraction de lignes</a></li>
         <li><a href="Convex_hull.html">Enveloppe convexe</a></li>
         <li><a href="polygone.html">Distance aux contours & Moments</a></li>
-        <li><a href="remappinge.html">Remapping</a></li>
+        <li><a href="remapping.html">Remapping</a></li>
         <li><a href="affine_dft.html" >Transformation affine & DFT</a></li>
         <li><a href="Watershed.html">Algorithme Watershed</a></li>
 
@@ -342,5 +342,6 @@ plt.imshow(copy)
 </body>
 
 </html>
+
 
 
