--- a/Modelisation/Robotique_theorique/navbar_robot_theo.html
+++ b/Modelisation/Robotique_theorique/navbar_robot_theo.html
@@ -17,7 +17,7 @@
       </ul>
     </li>
     <li>
-      <a href="../../Vision/Vision_ordinateur.htlm">Vision par Ordinateur </a>
+      <a href="../../Vision/Vision_ordinateur.html">Vision par Ordinateur </a>
     </li>
     <li>
       <a href="#">Automatisme et Automatique ▼</a>
