--- a/Vision/Vision_ordinateur.html
+++ b/Vision/Vision_ordinateur.html
@@ -82,7 +82,7 @@
       <h3>Vision par Ordinateur</h3>
       <ul>
         <ul>
-        <li><a href="Transformation_Morpho.html">Transformation Morphologique</a></li>
+        <li><a href="Transformation_Morpho.html" class="active">Transformation Morphologique</a></li>
         <li><a href="Pattern_Reconnaissance.html">Reconnaissance de motifs </a></li>
         <li><a href="Derive.html">Dérivé</a></li>
         <li><a href="Contours.html">Extraction des contours</a></li>
@@ -160,6 +160,7 @@
 
 </body>
 </html>
+
 
 
 
