--- a/Vision/navbar_vision.html
+++ b/Vision/navbar_vision.html
@@ -11,9 +11,9 @@
     <li>
       <a href="#">Projets Hardware ▼</a>
       <ul>
-        <li><a href="../Delta.html">Robot Delta</a></li>
-        <li><a href="../Gravity_Cancel.html">Robot Anti Gravité</a></li>
-        <li><a href="../Balance.html">Robot Self Balancing</a></li>
+        <li><a href="../Project/Delta.html">Robot Delta</a></li>
+        <li><a href="../Project/Gravity_Cancel.html">Robot Anti Gravité</a></li>
+        <li><a href="../Project/Balance.html">Robot Self Balancing</a></li>
       </ul>
     </li>
      <li>
