--- a/Modelisation/Robotique_theorique/navbar_robot_theo.html
+++ b/Modelisation/Robotique_theorique/navbar_robot_theo.html
@@ -21,12 +21,12 @@
     </li>
     <li>
       <a href="#">Automatisme et Automatique ▼</a>
-      <ul>
-        <li><a href=../../Automatique/Automatique_lineaire.html">Automatique linéaire</a></li>
+     <ul>
+        <li><a href="../../Automatique/Automatique_lineaire.html">Automatique linéaire</a></li>
         <li><a href="../../Automatique/Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
-        <li><a href="../../Automatique/PLC_COM.html">PLC : Protocole de COM </a></li>
-        <li><a href="../../Automatique/PLC_Composant.html">PLC : Composant</a></li>
-        <li><a href="../../Automatique/PLC_Language.html">PLC : Language de Programmation </a></li>
+        <li><a href="../../Automatique/PLC_Com/PLC_COM.html">PLC : Protocole de COM </a></li>
+        <li><a href="../../Automatique/PLC_Composant/Composant.html">PLC : Composant</a></li>
+        <li><a href="../../Automatique/PLC_Language/PLC_Prog.html">PLC : Language de Programmation </a></li>
       </ul>
     </li>
     <li>
