--- a/navbar.html
+++ b/navbar.html
@@ -22,7 +22,7 @@
     <li>
       <a href="#">Automatisme et Automatique ▼</a>
       <ul>
-        <li><a href=Automatique/Automatique_lineaire.html">Automatique linéaire</a></li>
+        <li><a href="Automatique/Automatique_lineaire.html">Automatique linéaire</a></li>
         <li><a href="Automatique/Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
         <li><a href="Automatique/PLC_Com/PLC_COM.html">PLC : Protocole de COM </a></li>
         <li><a href="Automatique/PLC_Composant/Composant.html">PLC : Composant</a></li>
@@ -56,6 +56,7 @@
     }
   });
 </script>
+
 
 
 
