--- a/Automatique/PLC_Language/navbar_plc_language.html
+++ b/Automatique/PLC_Language/navbar_plc_language.html
@@ -22,11 +22,11 @@
     <li>
       <a href="#" class="active">Automatisme et Automatique ▼</a>
       <ul>
-        <li><a href="../Automatique_lineaire.html">Automatique linéaire</a></li>
-        <li><a href="../Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
-        <li><a href="../PLC_COM.html">PLC : Protocole de COM </a></li>
-        <li><a href="../PLC_Composant.html">PLC : Composant</a></li>
-        <li><a href="PLC_Language.html">PLC : Language de Programmation </a></li>
+        <li><a href="../Automatique/Automatique_lineaire.html">Automatique linéaire</a></li>
+        <li><a href="../Automatique/Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
+        <li><a href="../Automatique/PLC_Com/PLC_COM.html">PLC : Protocole de COM </a></li>
+        <li><a href="../Automatique/PLC_Composant/Composant.html">PLC : Composant</a></li>
+        <li><a href="Automatique/PLC_Language/PLC_Prog.html">PLC : Language de Programmation </a></li>
       </ul>
     </li>
     <li>
