--- a/Automatique/PLC_Com/navbar_plc_com.html
+++ b/Automatique/PLC_Com/navbar_plc_com.html
@@ -22,8 +22,8 @@
     <li>
       <a href="#" class="active">Automatisme et Automatique ▼</a>
        <ul>
-        <li><a href="../Automatique/Automatique_lineaire.html">Automatique linéaire</a></li>
-        <li><a href="../Automatique/Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
+        <li><a href="../Automatique_lineaire.html">Automatique linéaire</a></li>
+        <li><a href="../Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
         <li><a href="PLC_Com/PLC_COM.html">PLC : Protocole de COM </a></li>
         <li><a href="../PLC_Composant/Composant.html">PLC : Composant</a></li>
         <li><a href="../PLC_Language/PLC_Prog.html">PLC : Language de Programmation </a></li>
