--- a/Automatique/PLC_Composants/navbar_plc_composant.html
+++ b/Automatique/PLC_Composants/navbar_plc_composant.html
@@ -36,7 +36,7 @@
         <li><a href="../../Articulation.html">Articulation</a></li>
       </ul>
     </li>
-    <li><a href="A_propos.html">À propos</a></li>
+    <li><a href="../../A_propos.html">À propos</a></li>
     <!-- Night mode toggle button inside navbar -->
      <li class="night-mode-btn">
       <button id="themeToggle">🌙 Night Mode</button>
