--- a/Projet/navbar_projet.html
+++ b/Projet/navbar_projet.html
@@ -24,9 +24,9 @@
       <ul>
         <li><a href=../Automatique/Automatique_lineaire.html">Automatique linéaire</a></li>
         <li><a href="../Automatique/Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
-        <li><a href="../Automatique/PLC_COM.html">PLC : Protocole de COM </a></li>
-        <li><a href="../Automatique/PLC_Composant.html">PLC : Composant</a></li>
-        <li><a href="../Automatique/PLC_Language.html">PLC : Language de Programmation </a></li>
+        <li><a href="../Automatique/PLC_Com/PLC_COM.html">PLC : Protocole de COM </a></li>
+        <li><a href="../Automatique/PLC_Composants/Composant.html">PLC : Composant</a></li>
+        <li><a href="../Automatique/PLC_Language/PLC_Prog.html">PLC : Language de Programmation </a></li>
       </ul>
     </li>
     <li>
@@ -56,6 +56,7 @@
     }
   });
 </script>
+
 
 
 
