--- a/Automatique/PLC_Language/navbar_plc_language.html
+++ b/Automatique/PLC_Language/navbar_plc_language.html
@@ -11,9 +11,9 @@
     <li>
       <a href="#" >Projets Hardware ▼</a>
       <ul>
-        <li><a href="../../Projet/Delta.html">Robot Delta</a></li>
-        <li><a href="../../Projet/Gravity_Cancel.html">Robot Anti Gravité</a></li>
-        <li><a href="../../Projet/Balance.html">Robot Self Balancing</a></li>
+        <li><a href="../../Project/Delta.html">Robot Delta</a></li>
+        <li><a href="../../Project/Gravity_Cancel.html">Robot Anti Gravité</a></li>
+        <li><a href="../../Project/Balance.html">Robot Self Balancing</a></li>
       </ul>
     </li>
     <li>
